codespace/drill-app-django/manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-api
  namespace: incident-mgmt
  labels:
    component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: incident-api
          image: incident-api:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8200
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 8200
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
