codespace/drill-app-django/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-api-svc
  namespace: incident-mgmt
spec:
  selector:
    component: api
  ports:
    - port: 80
      targetPort: 8200
