codespace/drill-app-django/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-db-svc
  namespace: incident-mgmt
spec:
  selector:
    component: database
  ports:
    - port: 5432
      targetPort: 5432
